# ruff-claude-hook

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.json
src/ruff_claude_hook/: __init__.py  cli.py  hook.py  init.py
src/ruff_claude_hook/templates/: CLAUDE.md.template  settings.json.template  settings.local.json.template
tests/: __init__.py  conftest.py  test_cli.py  test_hook.py  test_init.py  test_integration.py
tests/fixtures/: invalid_code.py  sample_claude_md.md  sample_code.py  sample_settings.json
