[project]
name = "ruff-claude-hook"
version = "0.1.0"
description = "Automatic ruff linting and formatting hook for Claude Code"
requires-python = ">=3.9"
authors = [
    {name = "Dennis Tseng", email = "piews482zt@gmail.com"}
]
dependencies = [
    "ruff>=0.1.0"
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
ruff-claude-hook = "ruff_claude_hook.cli:main"
rch = "ruff_claude_hook.cli:main"

[project.urls]
Homepage = "https://github.com/your-username/ruff-claude-hook"
Issues = "https://github.com/your-username/ruff-claude-hook/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N", "S"]
